2008-03-08  Torsten Rahn  <rahn@kde.org>

    * src/lib/geodata/handlers/dgml/DGMLHeadTagHandler.cpp:
    * src/lib/geodata/handlers/dgml/DGMLDocumentTagHandler.cpp:
    * src/lib/geodata/handlers/dgml/DGMLNameTagHandler.cpp:
    * src/lib/geodata/GeoDataTest.cpp:
    * src/lib/geodata/parser/GeoParser.cpp:
    * src/lib/geodata/CMakeLists.txt:
    * src/lib/geodata/scene/GeoSceneHead.{cpp,h}:
    * src/lib/geodata/scene/GeoSceneSettings.h:
    * src/lib/geodata/scene/GeoSceneDocument.{cpp,h}:

    Adding Name and Description tag - description tag doesn't get 
    recognized properly due to parent identification not working 
    correctly yet ...

2008-03-07  Inge Wallin  <inge@lysator.liu.se>

	Enable the new projection based measuretool.
	* src/lib/MeasureTool.cpp (drawDistancePath): use drawPath()
	instead of individual functions.
	(drawPath): draw a red line instead of white crosses.
	* src/lib/MercatorProjection.cpp (screenCoordinates): Bugfix for
	the +- issue

2008-03-06  Torsten Rahn  <rahn@kde.org>

	Fix transformation bugs where + and - were mixed up.
	* src/lib/SphericalProjection.cpp (screenCoordinates): bugfix
	* src/lib/EquirectProjection.cpp (screenCoordinates): bugfix

2008-03-07  Inge Wallin  <inge@lysator.liu.se>

	Introduce new parameter to the Projections: type of coordinates
	* src/lib/AbstractProjection.h (CoordinateType): New enum type
	* src/lib/SphericalProjection.{h,cpp} (screenCoordinates): new
	parameter CoordinateType
	* src/lib/EquirectProjection.{h,cpp} (screenCoordinates): new
	parameter CoordinateType
	* src/lib/MercatorProjection.{h,cpp} (screenCoordinates): new
	parameter CoordinateType
	* src/lib/MeasureTool.cpp (drawPath): Use new call conventions

2008-03-06  Torsten Rahn  <rahn@kde.org>

    * Translation issue as reported by icwiener.
    

2008-03-06  Inge Wallin  <inge@lysator.liu.se>

	Krazy fixes (Check for spelling errors):
	* src/lib/AbstractLayer/AbstractLayerData.h (AbstractLayerInterface),